[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3ala"
version = "0.0.0.dev0"
authors = [
  { name="Department for International Trade", email="sre@digital.trade.gov.uk" },
]
description = "A basic CLI-based aggregator to extract some very basic metrics from ALB logs stored in an S3 bucket"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "boto3>=1.34.41",
    "click>=8.1.7",
    "to-file-like-obj>=0.0.5",
]


[project.urls]
"Source" = "https://github.com/uktrade/s3ala"

[tool.hatch.build]
include = [
  "s3ala.py"
]

[project.scripts]
s3ala = "s3ala:main"
